--- a/index.html
+++ b/index.html
@@ -1,10 +1,90 @@
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="styles.css">
         <meta charset="UTF-8">
         <title>Landing Page</title>
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,300&display=swap" rel="stylesheet">
     </head>
 
     <body>
-        
+        <div class="header">
+            <div class="logo">
+                Header Logo
+            </div>
+            <div class="links">
+                <a href="">header link one</a>
+                <a href="">header link two</a>
+                <a href="">header link three</a>
+            </div>
+        </div>
+
+        <div class="cont-one">
+            <div class="cont-sub-one">
+                <div class="main-text">
+                    This website is awesome
+                </div>
+                <div class="sub-text">
+                    This website has some subtext that goes here under the main title. 
+                    It's a smaller font and the color is lower contrast.
+                </div>
+                <button>
+                    Sign up
+                </button>
+            </div>
+            <div class="cont-sub-two">
+                <div class="sub-text">
+                    this is a placeholder for an image
+                </div>
+            </div>
+        </div>
+
+        <div class="cont-two">
+            <div class="info-header">
+                Some random information.
+            </div>
+            <div class="cont-ill">
+                <div class="illu-text">
+                    <div class="cont-border">
+                    </div>
+                    <div class="box-subtext">
+                        this is some subtext under an illustration or image
+                    </div>
+                </div>
+                <div class="illu-text">
+                    <div class="cont-border">
+                    </div>
+                    <div class="box-subtext">
+                        this is some subtext under an illustration or image
+                    </div>
+                </div>
+                <div class="illu-text">
+                    <div class="cont-border">
+                    </div>
+                    <div class="box-subtext">
+                        this is some subtext under an illustration or image
+                    </div>
+                </div>
+                <div class="illu-text">
+                    <div class="cont-border">
+                    </div>
+                    <div class="box-subtext">
+                        this is some subtext under an illustration or image
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="cont-three">
+            <div class="quote-container">
+                <em><p class="quote-text">This is an inspiring quote, or a testimonial from a customer.
+                    Maybe it's just filling up space, or maybe people will actually
+                    read it. Who knows? All I know is that it looks nice.</p></em>
+                    <p class="sign-text">-Thor, God of Thunder</p>
+            </div>
+        </div>
+
     </body>
 </html>
