--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     This website has some subtext that goes here under the main title. 
                     It's a smaller font and the color is lower contrast.
                 </div>
-                <button>
+                <button class="button-one">
                     Sign up
                 </button>
             </div>
@@ -82,9 +82,20 @@
                 <em><p class="quote-text">This is an inspiring quote, or a testimonial from a customer.
                     Maybe it's just filling up space, or maybe people will actually
                     read it. Who knows? All I know is that it looks nice.</p></em>
-                    <p class="sign-text">-Thor, God of Thunder</p>
+                <p class="sign-text">-Thor, God of Thunder</p>
             </div>
         </div>
+
+        <div class="cont-four">
+            <div class="blue-box">
+                <div class="blue-box-left">
+                    <p class="blue-button-header">Call to action! It's time!</p>
+                    <p class="sub-text">Sign up for our product by clicking that button right over there!</p> 
+                </div>
+                <button class="button-two">Sign up</button>
+            </div>
+        </div>
+
 
     </body>
 </html>
