--- a/index.html
+++ b/index.html
@@ -95,7 +95,9 @@
                 <button class="button-two">Sign up</button>
             </div>
         </div>
-
+        <div class="footer">
+            <div class="sub-text">Copyright © The Odin Project</div>
+        </div>
 
     </body>
 </html>
